Iniciando construção do CSS

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <body class="principal">
 
-      <div class="container_all">
+      <div class="container__all">
 
         <header>
           <div class="container__header">
@@ -33,7 +33,7 @@
               <div class="supervisor__card">
                 <h1 class="supervisor__card__title">Supervisor</h1>
                 <p class="supervisor__card__text">Monitora atividade identificar possíveis bloqueios no projeto</p>
-                <img src="img/icon-team-builder.svg" alt="Imagem de uma lupa com um olho dentro">
+                <img src="img/icon-supervisor.svg" alt="Imagem de uma lupa com um olho dentro">
               </div>
             
             <div class="mid__cards">
@@ -48,7 +48,7 @@
               <div class="karma__card">
                 <h1 class="karma__title">Karma</h1>
                 <p class="karma__text">Regularmente avalia nossos talentos para garantir qualidade</p>
-                <img src="img/icon-calculator.svg" alt="Imagem de uma lâmpada acesa">
+                <img src="img/icon-karma.svg" alt="Imagem de uma lâmpada acesa">
               </div>
             </div>
 
